--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -33,7 +33,9 @@
           </div>
         </article>
       </div>
-      {{partial "sidebar.html" . }}
+      <div class="col-lg-4 mt-5 mt-lg-0">
+        {{ partial "sidebar.html" . }}
+      </div>
     </div>
   </div>
 </section>
