--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,12 +6,13 @@
         <div class="col-md-4 mb-4 mb-md-0">
           <a href="{{site.BaseURL}}" class="footer-brand d-inline-block mb-3">
             {{ if site.Params.logo }}
-              {{ partial "image.html" (dict "Src" site.Params.logo "Alt" "Fluxio Logo" "Class" "footer-logo" ) }}
+            {{ partial "image.html" (dict "Src" site.Params.logo "Alt" "Fluxio Logo" "Class" "footer-logo" ) }}
             {{ else }}
-              <i class="ti-world mr-2"></i><span class="brand-text">Fluxio</span>
+            <i class="ti-world mr-2"></i><span class="brand-text">Fluxio</span>
             {{ end }}
           </a>
-          <p class="footer-description">{{ with site.Params.description }}{{ . }}{{ else }}Modern Tech News & Insights{{ end }}</p>
+          <p class="footer-description">{{ with site.Params.description }}{{ . }}{{ else }}Modern Tech News & Insights{{
+            end }}</p>
         </div>
 
         <!-- Center: Quick Links -->
@@ -36,7 +37,7 @@
             </li>
             {{ end }}
           </ul>
-          
+
           {{ if or site.Params.email site.Params.mobile }}
           <div class="footer-contact mt-3">
             {{ if site.Params.email }}
@@ -55,10 +56,14 @@
           <div class="col-md-6 text-center text-md-left">
             <p class="copyright mb-md-0">
               {{ with site.Params.copyright }}
-                {{ . | markdownify }}
+              {{ . | markdownify }}
               {{ else }}
-                &copy; {{ now.Year }} {{ site.Title }} All rights reserved.
+              &copy; {{ now.Year }} {{ site.Title }} All rights reserved.
               {{ end }}
+              <span class="mx-2">|</span>
+              <a href="#" class="text-muted small">Privacy Policy</a>
+              <span class="mx-1">&middot;</span>
+              <a href="#" class="text-muted small">Terms</a>
             </p>
           </div>
           <div class="col-md-6 text-center text-md-right">
@@ -82,48 +87,49 @@
 <script src="{{ $script.Permalink }}"></script>
 
 <!-- Custom script for Fluxio (infinite scroll etc.) -->
-<script src="{{ "js/custom.js" | absURL }}"></script>
-<script src="{{ "js/copycode.js" | absURL }}"></script>
+<script src="{{ " js/custom.js" | absURL }}"></script>
+<script src="{{ " js/copycode.js" | absURL }}"></script>
 
 <!-- cookie -->
 {{ if site.Params.cookies.enable }}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js"></script>
 <div id="js-cookie-box" class="cookie-box cookie-box-hide">
-	This site uses cookies. By continuing to use this website, you agree to their use. <span id="js-cookie-button" class="btn btn-sm btn-outline-light ml-2">I Accept</span>
+  This site uses cookies. By continuing to use this website, you agree to their use. <span id="js-cookie-button"
+    class="btn btn-sm btn-outline-light ml-2">I Accept</span>
 </div>
 <script>
-	(function ($) {
-		const cookieBox = document.getElementById('js-cookie-box');
-		const cookieButton = document.getElementById('js-cookie-button');
-		if (!Cookies.get('cookie-box')) {
-			cookieBox.classList.remove('cookie-box-hide');
-			cookieButton.onclick = function () {
-				Cookies.set('cookie-box', true, {
-					expires: {{ site.Params.cookies.expire_days }}
-				});
-				cookieBox.classList.add('cookie-box-hide');
-			};
+  (function ($) {
+    const cookieBox = document.getElementById('js-cookie-box');
+    const cookieButton = document.getElementById('js-cookie-button');
+    if (!Cookies.get('cookie-box')) {
+      cookieBox.classList.remove('cookie-box-hide');
+      cookieButton.onclick = function () {
+        Cookies.set('cookie-box', true, {
+          expires: {{ site.Params.cookies.expire_days }}
+    });
+    cookieBox.classList.add('cookie-box-hide');
+  };
 		}
-	})(jQuery);
+	}) (jQuery);
 </script>
 
 <!-- cookie style -->
 <style>
-.cookie-box {
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  text-align: center;
-  z-index: 9999;
-  padding: 1rem 2rem;
-  background: rgb(71, 71, 71);
-  transition: all .75s cubic-bezier(.19, 1, .22, 1);
-  color: #fdfdfd;
-}
+  .cookie-box {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-align: center;
+    z-index: 9999;
+    padding: 1rem 2rem;
+    background: rgb(71, 71, 71);
+    transition: all .75s cubic-bezier(.19, 1, .22, 1);
+    color: #fdfdfd;
+  }
 
-.cookie-box-hide {
-  display: none;
-}
+  .cookie-box-hide {
+    display: none;
+  }
 </style>
 {{ end }}
