--- a/layouts/shortcodes/mermaid.html
+++ b/layouts/shortcodes/mermaid.html
@@ -1,3 +1,3 @@
-<div class="mermaid">
-    {{ .Inner }}
+<div class="mermaid" style="text-align: center; margin: 2rem 0;">
+{{ .Inner | safeHTML }}
 </div>
